--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,13 @@
   		<artifactId>jsp-api</artifactId>
   		<version>2.2.1-b03</version>
   	</dependency>
+  	<!-- 导入json包 -->
+  	<dependency> 
+		<groupId>net.sf.json-lib</groupId> 
+		<artifactId>json-lib</artifactId> 
+		<version>2.4</version> 
+		<classifier>jdk15</classifier> 
+	</dependency> 
   </dependencies>
   <build>
   	<plugins>
